--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css_actual/styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <title>Filters</title>
+</head>
+<body>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+    <aside class="filters">
+        <div class="filters_box">
+            <div class="filters_wrapper">
+                <h2 class="filters_title text_colour">Фільтри</h2>
+                <div class="filters_types_box">
+                    <ul class="filters_popular filters_wrapper">
+                        <h3 class="filters_popular_name text_colour"><a class="text_colour" href="#">Популярне</a></h3>
+                            <li class="filters_popular_options text_colour"><a class="text_colour" href="#">За день</a></li>
+                            <li class="filters_popular_options text_colour"><a class="text_colour" href="#">За тиждень</a></li>
+                    </ul>
+                    <ul class="filters_date text_colour"><a class="text_colour" href="#"><h3>За рейтингом</h3></a></ul>
+                    <ul class="filters_favourite text_colour"><a class="text_colour" href="#"><h3>Улюблене</h3></ul>
+                    <ul class="filters_date text_colour"><a class="text_colour" href="#"><h3>Останні фільми</h3></a></ul>
+                </div>
+            </div>
+            <div class="button_wrapper">
+                <button class="button"><span style="font-size: 24px;" class="material-icons">settings</span></button>
+            </div>
+        </div>
+    </aside>
+
+</body>
 </html>
