--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,15 @@
     />
   </head>
   <body>
-
+    <header class="sfs__header">
+      <div class="header__content">
+        <h1 class="header__logo"><a class="logo__wrapper__letters" href="#"><span class="logo__letter logo__first-letter">s</span><span class="logo__word logo__first-word">erial</span><span class="logo__letter logo__second-letter">f</span><span class="logo__word logo__second-word">ilm</span><span class="logo__letter logo__third-letter">s</span><span class="logo__word logo__third-word">earch</span></a></h1>
+        <form id="content">
+          <input type="text" name="input" class="input" id="search-input">
+          <button type="reset" class="search" id="search-btn"></button>
+        </form>
+      </div>
+    </header>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
