--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <header class="sfs__header">
-      <div class="header__content">
-        <h1 class="header__logo"><a class="logo__wrapper__letters" href="#"><span class="logo__letter logo__first-letter">s</span><span class="logo__word logo__first-word">erial</span><span class="logo__letter logo__second-letter">f</span><span class="logo__word logo__second-word">ilm</span><span class="logo__letter logo__third-letter">s</span><span class="logo__word logo__third-word">earch</span></a></h1>
-        <form id="content">
-          <input type="text" name="input" class="input" id="search-input">
-          <button type="reset" class="search" id="search-btn"></button>
-        </form>
-      </div>
-    </header>
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Заголовок страницы</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="sfs__header">
+    <div class="header__content">
+      <h1 class="header__logo"><a class="logo__wrapper__letters" href="#"><span
+            class="logo__letter logo__first-letter">s</span><span class="logo__word logo__first-word">erial</span><span
+            class="logo__letter logo__second-letter">f</span><span class="logo__word logo__second-word">ilm</span><span
+            class="logo__letter logo__third-letter">s</span><span class="logo__word logo__third-word">earch</span></a>
+      </h1>
+      <form id="content">
+        <input type="text" name="input" class="input" id="search-input">
+        <button type="reset" class="search" id="search-btn"></button>
+      </form>
+    </div>
+  </header>
+  <main class="main">
+    <section class="films_section">
+      <input type="checkbox" id="toggle" class="toggle--checkbox">
+      <label for="toggle" class="toggle--label">
+
+      </label>
+      <ul class="js-card-container">
+
+      </ul>
+      <button type="button" class="load_more js-load_more">
+
+        <span class="load_more_text-content spinner">Показати ще...</span>
+      </button>
+    </section>
+
+
+
+  </main>
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+</body>
+
 </html>
