--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,21 @@
     </div>
   </header>
   <main class="main">
+    <aside class="filters">
+      <div class="filters_box">
+          <div id="filters" class="filters_types_box">
+              <h2 class="filters_title text_general">Фільтри</h2>
+              <ul id="popular" class="filters_name"><h3><a class="text_general" href="#">Популярне</a></h3></ul>
+              <ul id="rate" class="filters_name"><h3><a class="text_general" href="#">За рейтингом</a></h3></ul>
+              <ul id="lastfilm" class="filters_name"><h3><a class="text_general" href="#">Скоро на екранах</a></h3></ul>
+          </div>
+          <div class="button_box">
+              <div id="button" class="button_wrapper">
+                  <button class="button"><span style="font-size: 50px; color: white;" class="material-icons">settings</span></button>
+              </div>
+          </div>
+      </div>
+  </aside>
     <section class="films_section">
       <input type="checkbox" id="toggle" class="toggle--checkbox">
       <label for="toggle" class="toggle--label">
